<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Kane O'Riley
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License")
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Homage Sample</string>
    <string name="developer_name">Kane O\'Riley</string>
    <string name="developer_email">kane@oriley.me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_expandable">Expandable</string>
    <string name="drawer_popup">Popup</string>
    <string name="drawer_expandable_no_icon">Expandable w/o Icons</string>
    <string name="drawer_popup_no_icon">Popup w/o Icons</string>
    <string name="drawer_dark_expandable">Expandable Dark</string>
    <string name="drawer_dark_popup">Popup Dark</string>
    <string name="drawer_expandable_no_card">Expandable w/o CardView</string>
    <string name="drawer_expandable_no_card_no_icon">Expandable w/o CardView &amp; Icons</string>
    <string name="drawer_dark_popup_no_card_no_icon">Popup Dark w/o CardView &amp; Icons</string>

    <string name="license_oriley_name">The O\'Riley License (TM)</string>
    <string name="license_oriley_url">http://oriley.me</string>
    <string name="license_oriley_description">
        <![CDATA[
        Actually no rights are reserved, but this is a demonstration<br />
        of how easy it is to include your own custom licenses :).
        <br /><br />
        BRRRRR BIG SCARY WORDS
        ]]>
    </string>

</resources>
