<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Kane O'Riley
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License")
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_expandable"
                android:title="@string/drawer_expandable"/>
        <item
                android:id="@+id/nav_popup"
                android:title="@string/drawer_popup"/>
        <item
                android:id="@+id/nav_expandable_no_icons"
                android:title="@string/drawer_expandable_no_icon"/>
        <item
                android:id="@+id/nav_popup_no_icons"
                android:title="@string/drawer_popup_no_icon"/>
        <item
                android:id="@+id/nav_dark_expandable"
                android:title="@string/drawer_dark_expandable"/>
        <item
            android:id="@+id/nav_dark_popup"
            android:title="@string/drawer_dark_popup"/>

        <item
            android:id="@+id/nav_expandable_no_card"
            android:title="@string/drawer_expandable_no_card"/>
    </group>

</menu>
